# async-dns

./: Cargo.toml  README.md
.github/workflows/: ci.yml
async-dns/: CHANGELOG.md  Cargo.toml  README.md
async-dns/benches/: comparison.rs
async-dns/examples/: lookup.rs
async-dns/src/: fallback.rs  lib.rs  unix.rs  windows.rs
async-dns/tests/: lookup.rs
dns-protocol/: CHANGELOG.md  Cargo.toml  README.md
dns-protocol/examples/: nslookup.rs
dns-protocol/src/: lib.rs  ser.rs
