[package]
name = "async-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(windows)'.dependencies]
async-channel = "1"
futures-lite = "1.12.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36"
features = [
    "Win32_NetworkManagement_Dns",
    "Win32_Foundation"
]

[target.'cfg(unix)'.dependencies]
async-executor = "1"
async-fs = "1"
async-io = "1"
dns-protocol = { path = "../dns-protocol" }
futures-lite = "1.12.0"
fastrand = "1"
memchr = "2.5.0"

[target.'cfg(not(any(unix, windows)))'.dependencies]
blocking = "1"
