[package]
name = "async-dns"
version = "0.1.0"
edition = "2018"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A simple async DNS resolver"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/notgull/async-dns/tree/master/async-dns#readme"
repository = "https://github.com/notgull/async-dns/tree/master/async-dns"
rust-version = "1.47"
keywords = ["dns", "async"]
categories = ["network-programming", "asynchronous"]

[[bench]]
name = "comparison"
harness = false

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(windows)'.dependencies]
async-channel = "1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36"
features = [
    "Win32_NetworkManagement_Dns",
    "Win32_Foundation"
]

[target.'cfg(unix)'.dependencies]
async-executor = "1"
async-fs = "1"
async-io = "1"
dns-protocol = "0.1"
futures-lite = "1.12.0"
fastrand = "1"
memchr = "2.5.0"

[dev-dependencies]
blocking = "1"
criterion = "0.4.0"

[target.'cfg(windows)'.dev-dependencies]
# we use async-io::block_on in tests
async-io = "1"
