[package]
name = "async-dns"
version = "0.1.1"
edition = "2018"
authors = ["John Nunley <dev@notgull.net>"]
description = "A simple async DNS resolver"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/notgull/async-dns/tree/master/async-dns#readme"
repository = "https://github.com/notgull/async-dns/tree/master/async-dns"
rust-version = "1.63"
keywords = ["dns", "async"]
categories = ["network-programming", "asynchronous"]

[[bench]]
name = "comparison"
harness = false

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(windows)'.dependencies]
async-channel = "2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_NetworkManagement_Dns",
    "Win32_Foundation"
]

[target.'cfg(unix)'.dependencies]
async-executor = "1"
async-fs = "2"
async-io = "2"
dns-protocol = "0.1"
futures-lite = "2"
fastrand = "2"
memchr = "2.5.0"

[dev-dependencies]
blocking = "1"
criterion = "0.4.0"

[target.'cfg(windows)'.dev-dependencies]
# we use async-io::block_on in tests
async-io = "2"
