[package]
name = "dns-protocol"
version = "0.1.0"
edition = "2018"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A DNS protocol implementation in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
memchr = { version = "2.5.0", default-features = false }

[features]
default = ["std"]
std = []
