[package]
name = "dns-protocol"
version = "0.1.2"
edition = "2018"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A DNS protocol implementation in Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/notgull/async-dns/tree/master/dns-protocol#readme"
repository = "https://github.com/notgull/async-dns"
rust-version = "1.41"

[dependencies]
memchr = { version = "2.7", default-features = false }

[features]
default = ["std"]
std = []
